fixed text alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -870,7 +870,7 @@ input:-webkit-autofill {
  } 
  .out p{
      font-size: 16px;
-     text-align: justify
+     
  }
 
 .typed-cursor{
@@ -1062,7 +1062,7 @@ input:-webkit-autofill {
     margin-left: 14px;
     color: #000000;
     padding-top: 5px;
-    text-align: justify;
+    
 }
 .exp_date{
     margin-left: 1.5px;
